--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     background-color: lightblue;
 
-    background-image: "images/canadian_hackathon.png";
+    background-image: url(images/canadian-hackathon.png);
     background-repeat: no-repeat;
     background-position: right top;
     margin-right: 200px;
