--- a/main.css
+++ b/main.css
@@ -17,14 +17,17 @@ body {
   }
 
   .event{
-    padding: 1%;
+    padding: 2%;
     
   }
+  #eventblurb {
+    padding: 10px;
+    }
 
   h2 {
-    color: white;
     font-family: "Lucida Console", Arial, Helvetica, sans-serif;
-    margin-left: 10px;
+    color:#2f5496;
+    font-size: 2em;
   }
   
   p {
@@ -32,5 +35,6 @@ body {
     font-size: 20px;
     text-decoration: none;
     margin-left: 20px;
+    line-height: 1.5;
 
   }
